# xelastic

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE.txt  README.md  dev_readme.md  docker-compose.yml  howto_bulk.py  howto_scroll.py  howto_templates.py  howto_updateFields.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.txt  requirements.txt  sample_bulk.py  sample_updateFields.py  setup.cfg  token.txt  xelastic.py  xelastic.txt  xelastic_doc.html
docs/: how-to-guides.md  index.md  reference.md
explanation/: index.html
how-to-guides/: index.html
howto/: howto_bulk.py  howto_query.py  howto_scroll.py  howto_templates.py  howto_updateFields.py  temp.py
reference/: index.html
site/: 404.html
site/explanation/: index.html
site/reference/: index.html
src/: xelastic.py
src/xelastic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_bulk_scroll_update_delete.py  test_concurrency.py  test_exceptions.py  test_main.py  test_xelastic.py  test_xelastic_index.py
tutorials/: index.html
