[metadata]
name = xelastic
version = 2.5.3
py_modules=['xelastic']
author = "Juris Rats"
author_email = "jurisra@gmail.com"
description = "Easy interface class to Elasticsearch."
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown

[options]
package = xelastic

[options.packages.find]
where = .
exclude =
   tests

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
